force-app/main/default/objects/SeptObject__c/SeptObject__c.object-meta.xml
<CustomObject>
    <label>SeptObject</label>
    <nameField>
        <label>SeptObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SeptObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>