force-app/main/default/objects/SeptObject__c/fields/SeptObject_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>SeptObject_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SeptObject Checkbox</label>
    <type>Checkbox</type>
</CustomField>