force-app/main/default/objects/SeptObject__c/fields/SeptObject_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>SeptObject_Date_Time__c</fullName>
    <label>SeptObject Date/Time</label>
    <type>DateTime</type>
</CustomField>